fix body overflow-x hidden

--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -14,6 +14,7 @@ body {
 	margin: 0;
 	color: #000;
 	font-family: 'Roboto', 'Nanum Gothic Coding', sans-serif;
+	overflow-x: hidden;
 }
 
 a {
